# ampq-waitlist-api

./: .env  API_REFERENCE.md  Cargo.toml  README.md  all_tests.py  docker-compose.yml  requirements.txt
migrations/2025-01-16-081620_create_conferences/: down.sql  up.sql
migrations/2025-05-21-043049_add_booking_fields/: down.sql  up.sql
migrations/2025-06-10-231946_add_confirmation_pending_status/: down.sql  up.sql
migrations/2025-06-12-010807_fix_waitlist_deadline_constraint/: down.sql  up.sql
migrations/2025-06-12-025656_add_unique_active_booking_constraint/: down.sql  up.sql
src/: actions.rs  main.rs  models.rs  queue.rs  schema.rs
