[package]
name = "conference"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.0", features = ["postgres", "chrono", "r2d2"] }
dotenvy = "0.15"
r2d2 = "0.8"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
amqprs = "2.1"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }